--- a/heavycenter/src/main/res/layout/item_main_order_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_doing.xml
@@ -25,6 +25,8 @@
             android:id="@+id/circlebar"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            app:color_one="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+            app:update="@{item_main_order_doing.percent}"
             android:layout_centerInParent="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@+id/guideline2"
@@ -47,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/color_yell_blue"
+                android:textColor="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="25sp" />
 
             <TextView
@@ -58,7 +60,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="2dp"
                 android:text="车"
-                android:textColor="@color/color_yell_blue"
+                android:textColor="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="15sp" />
 
 
@@ -80,14 +82,14 @@
                 android:layout_height="wrap_content"
                 android:maxEms="7"
                 android:singleLine="true"
-                android:textColor="@color/color_yell_blue"
+                android:textColor="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="15sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
-                android:textColor="@color/color_hv_yelll"
+                android:textColor="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="15sp" />
 
             <TextView
@@ -98,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:maxEms="7"
                 android:singleLine="true"
-                android:textColor="@color/color_hv_yelll"
+                android:textColor="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="15sp" />
         </LinearLayout>
 
@@ -127,7 +129,7 @@
         <TextView
             tools:text="c000"
             android:id="@+id/tv_spes"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:includeFontPadding="false"
@@ -136,13 +138,14 @@
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
             app:layout_constraintBottom_toBottomOf="@+id/tv_goodname"
+            app:layout_constraintRight_toLeftOf="@+id/tv_carno"
             app:layout_constraintLeft_toRightOf="@+id/tv_goodname" />
 
 
         <TextView
             android:visibility="@{item_main_order_doing.carLicenseNo==null?View.GONE:View.VISIBLE}"
-            android:textColor="@{item_main_order_doing.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
-            android:background="@{item_main_order_doing.sendType?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
+            android:textColor="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+            android:background="@{item_main_order_doing.IDiliverCom?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
             tools:text="沪12345"
             android:id="@+id/tv_carno"
             android:layout_width="wrap_content"
@@ -152,26 +155,27 @@
             android:text="@{item_main_order_doing.carLicenseNo}"
             android:textSize="12sp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@+id/tv_goodname"
+            app:layout_constraintTop_toTopOf="@+id/tv_goodname" />
 
 
         <TextView
 
             tools:text="来自"
-            android:background="@{item_main_order_doing.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
+            android:background="@{item_main_order_doing.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:id="@+id/tv_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:includeFontPadding="false"
             android:padding="1dp"
             android:singleLine="true"
             android:text="@{item_main_order_doing.type}"
             android:textColor="@color/black"
             android:textSize="13sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_duimian"
+           app:layout_constraintTop_toTopOf="@+id/tv_duimian"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_duimian"
             app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
-            app:layout_constraintTop_toBottomOf="@+id/tv_goodname" />
+     />
 
         <TextView
             tools:text="王尼玛"
