--- a/heavycenter/src/main/res/layout/frag_main_weigts_bottom.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts_bottom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:style_common="http://schemas.android.com/apk/res-auto"
-    xmlns:style_toptypeview="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_main_weigts_bottom"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.jpush.WeightMsg.MessageBean" />
+        <import type="android.view.View"/>
     </data>
 
 
@@ -29,9 +28,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:text="系统自动识别当前驾驶员去送货"
+            android:text='@{frag_main_weigts_bottom.contentCN}'
             android:textColor="@color/color_grey_500"
-            android:textSize="@dimen/hv_dimen_text"
+            android:textSize="15sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_select"
             app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -43,13 +42,13 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/bg_hv_sharp2_yell_solid"
             android:gravity="center"
-            android:paddingBottom="5dp"
+            android:paddingBottom="3dp"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:paddingTop="5dp"
+            android:paddingTop="3dp"
             android:text="重新选择"
             android:textColor="@color/white"
-            android:textSize="@dimen/hv_dimen_text_title"
+            android:textSize="15sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,14 +65,47 @@
 
 
         <TextView
+            android:gravity="right|center_vertical"
+            app:layout_constraintLeft_toLeftOf="@+id/circlebar"
+            app:layout_constraintRight_toLeftOf="@+id/tv2"
+            app:layout_constraintTop_toTopOf="@+id/circlebar"
+            app:layout_constraintBottom_toBottomOf="@+id/circlebar"
+            tools:text="0"
+            android:text='@{frag_main_weigts_bottom.order.totalRecord+""}'
+            android:id="@+id/tv_carnum"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textColor="@{frag_main_weigts_bottom.order.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+            android:textSize="25sp" />
+
+        <TextView
+            android:gravity="left|center_vertical"
+            app:layout_constraintLeft_toRightOf="@+id/tv_carnum"
+            app:layout_constraintRight_toRightOf="@+id/circlebar"
+            app:layout_constraintTop_toTopOf="@+id/circlebar"
+            app:layout_constraintBottom_toBottomOf="@+id/circlebar"
+            android:id="@+id/tv2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_carnum"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="2dp"
+            android:text="车"
+            android:textColor="@{frag_main_weigts_bottom.order.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+            android:textSize="15sp" />
+
+
+        <TextView
             android:id="@+id/tv_goodname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:includeFontPadding="false"
-            android:text="2333"
+            tools:text="2333"
+            android:text="@{frag_main_weigts_bottom.order.productName}"
             android:textColor="@color/black"
-            android:textSize="@dimen/hv_dimen_text_title_aaaa"
+            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
             app:layout_constraintLeft_toRightOf="@+id/circlebar"
             app:layout_constraintTop_toTopOf="@+id/circlebar" />
 
@@ -81,43 +113,48 @@
             android:id="@+id/tv_spes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
             android:includeFontPadding="false"
-            android:text="2333"
+            tools:text="2333"
+            android:text="@{frag_main_weigts_bottom.order.specification}"
             android:textColor="@color/black"
-            android:textSize="@dimen/hv_dimen_text_title_aaaa"
+            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_goodname"
             app:layout_constraintBottom_toBottomOf="@+id/tv_goodname"
             app:layout_constraintLeft_toRightOf="@+id/tv_goodname" />
 
 
         <TextView
+            android:visibility="@{frag_main_weigts_bottom==null?View.GONE:View.VISIBLE}"
+            android:background="@{frag_main_weigts_bottom.order.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:id="@+id/tv_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/bg_hv_sharp2_yell_solid"
-            android:text="发往"
+            android:text="@{frag_main_weigts_bottom.order.type}"
+            android:padding="1dp"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            app:layout_constraintTop_toTopOf="@+id/tv_comp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_comp"
             app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
-            app:layout_constraintTop_toBottomOf="@+id/tv_goodname" />
+            android:textSize="13sp" />
 
         <TextView
+            android:layout_marginTop="7dp"
             android:id="@+id/tv_comp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:includeFontPadding="false"
-            android:text="上海绿地"
+            tools:text="上海绿地"
+            android:text="@{frag_main_weigts_bottom.order.accessComName}"
             android:textColor="@color/black"
             android:textSize="@dimen/hv_dimen_text_aaa"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_type"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_type"
+            app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
             app:layout_constraintLeft_toRightOf="@+id/tv_type" />
 
 
         <ImageView
+            android:visibility="gone"
             android:layout_width="23dp"
             android:layout_height="23dp"
             android:src="@drawable/icon_hv_cancle"
@@ -166,7 +203,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="10t"
+                android:text="@{frag_main_weigts_bottom.jzCN}"
                 android:textColor="@color/color_grey_400"
                 android:textSize="@dimen/hv_dimen_text" />
 
@@ -174,7 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="13t"
+
                 android:textColor="@color/color_grey_400"
                 android:textSize="@dimen/hv_dimen_text" />
         </LinearLayout>
@@ -222,7 +259,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="10t"
+                android:text="@{frag_main_weigts_bottom.mzCN}"
                 android:textColor="@color/color_grey_400"
                 android:textSize="@dimen/hv_dimen_text" />
 
@@ -230,7 +267,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="10t"
+
                 android:textColor="@color/color_grey_400"
                 android:textSize="@dimen/hv_dimen_text" />
         </LinearLayout>
@@ -250,7 +287,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="01/15 10:10"
+                android:text="@{frag_main_weigts_bottom.timeCN}"
                 android:textColor="@color/color_grey_400"
                 android:textSize="@dimen/hv_dimen_text" />
 
@@ -258,7 +295,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="01/15 10:10"
+                android:text="@{frag_main_weigts_bottom.timeCN}"
                 android:textColor="@color/color_grey_400"
                 android:textSize="@dimen/hv_dimen_text" />
         </LinearLayout>
@@ -283,16 +320,16 @@
             android:textSize="21sp"
             android:visibility="visible"
 
-            style_common:boo_one="true"
-            style_common:color_one="@color/color_hv_yelll"
-            style_common:color_stroke="@color/red"
-            style_common:color_stroke_two="@color/color_red_500"
-            style_common:color_two="@color/color_red_500"
-            style_common:color_txt="@color/white"
-            style_common:color_txt_two="@color/white"
-            style_common:corner="5dp"
-            style_common:corner_two="5dp"
-            style_common:stroke="0dp"
-            style_common:stroke_two="2dp" />
+            app:boo_one="true"
+            app:color_one="@color/color_hv_yelll"
+            app:color_stroke="@color/red"
+            app:color_stroke_two="@color/color_red_500"
+            app:color_two="@color/color_red_500"
+            app:color_txt="@color/white"
+            app:color_txt_two="@color/white"
+            app:corner="5dp"
+            app:corner_two="5dp"
+            app:stroke="0dp"
+            app:stroke_two="2dp" />
     </android.support.constraint.ConstraintLayout>
 </layout>
