--- a/heavycenter/src/main/res/layout/item_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_begin.xml
@@ -51,14 +51,14 @@
             android:layout_height="wrap_content" />
         <TextView
             tools:text="1"
-            android:paddingLeft="1dp"
-            android:paddingRight="1dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/tv_productName"
             android:id="@+id/tv_planmun"
-            android:background="@{item_main_order_begin.sendType?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
+            android:background="@{item_main_order_begin.IDiliverCom?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
             android:singleLine="true"
-            android:textColor="@{item_main_order_begin.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
+            android:textColor="@{item_main_order_begin.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
             android:textSize="12sp"
             android:text="@{item_main_order_begin.planNumberCN}"
             android:layout_width="wrap_content"
@@ -66,13 +66,12 @@
 
         <TextView
             tools:text="来自"
-            android:background="@{item_main_order_begin.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
+            android:background="@{item_main_order_begin.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:padding="1dp"
             android:includeFontPadding="true"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_productName"
+           app:layout_constraintTop_toTopOf="@+id/tv_duimian"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_duimian"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_duimian"
             android:id="@+id/tv_type"
             android:layout_gravity="bottom"
             android:gravity="center"
@@ -147,7 +146,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             app:layout_constraintRight_toLeftOf="@+id/bt_reject"
-            app:layout_constraintTop_toBottomOf="@+id/tv_type"
+            app:layout_constraintTop_toBottomOf="@+id/tv_duimian"
             android:paddingTop="3dp"
             android:paddingBottom="3dp"
             android:paddingLeft="12dp"
