--- a/heavycenter/src/main/res/layout/item_main_order_detail_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_begin.xml
@@ -12,10 +12,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:id="@+id/ll_neworder"
         >
 
@@ -50,11 +50,12 @@
             android:paddingLeft="1dp"
             android:paddingRight="1dp"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_productName"
             app:layout_constraintBottom_toBottomOf="@+id/tv_productName"
             android:id="@+id/tv_planmun"
-            android:background="@{item_main_order_detail_begin.sendType?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
+            android:background="@{item_main_order_detail_begin.IDiliverCom?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
             android:singleLine="true"
-            android:textColor="@{item_main_order_detail_begin.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
+            android:textColor="@{item_main_order_detail_begin.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
             android:textSize="12sp"
             android:text='@{item_main_order_detail_begin.planNumberCN}'
             android:layout_width="wrap_content"
@@ -64,11 +65,11 @@
 
             tools:text="来自"
             android:visibility="@{item_main_order_detail_begin==null?View.GONE : View.VISIBLE}"
-            android:background="@{item_main_order_detail_begin.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
+            android:background="@{item_main_order_detail_begin.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:padding="1dp"
             android:includeFontPadding="false"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_productName"
+       app:layout_constraintTop_toTopOf="@+id/tv_duimian"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_duimian"
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/tv_type"
             android:layout_gravity="bottom"
@@ -97,6 +98,7 @@
 
 
         <TextView
+            android:visibility="gone"
             tools:text="计划开始时间: "
             android:text="@{item_main_order_detail_begin.planTimeCN}"
             android:includeFontPadding="false"
