--- a/heavycenter/src/main/res/layout/item_main_order_detail_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_doing.xml
@@ -23,6 +23,8 @@
             android:id="@+id/circlebar"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            app:color_one="@{item_main_order_detail_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+            app:update="@{item_main_order_detail_doing.percent}"
             android:layout_centerInParent="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@+id/guideline2"
@@ -45,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/color_yell_blue"
+                android:textColor="@{item_main_order_detail_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="25sp" />
 
             <TextView
@@ -55,7 +57,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="2dp"
                 android:text="车"
-                android:textColor="@color/color_yell_blue"
+                android:textColor="@{item_main_order_detail_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="15sp" />
 
 
@@ -76,13 +78,13 @@
                 android:maxEms="7"
                 android:id="@+id/tv_current"
                 android:textSize="15sp"
-                android:textColor="@color/color_yell_blue"
+                android:textColor="@{item_main_order_detail_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:text="/"
                 android:textSize="15sp"
-                android:textColor="@color/color_hv_yelll"
+                android:textColor="@{item_main_order_detail_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -92,7 +94,7 @@
                 android:maxEms="7"
                 android:id="@+id/tv_plan"
                 android:textSize="15sp"
-                android:textColor="@color/color_hv_yelll"
+                android:textColor="@{item_main_order_detail_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
@@ -125,22 +127,25 @@
             android:includeFontPadding="false"
             app:layout_constraintBottom_toBottomOf="@+id/tv_goodname"
             app:layout_constraintLeft_toRightOf="@+id/tv_goodname"
+            app:layout_constraintRight_toLeftOf="@+id/tv_carno"
             android:id="@+id/tv_spes"
             android:singleLine="true"
             android:layout_marginLeft="15dp"
             android:text="@{item_main_order_detail_doing.specification}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
 
         <TextView
-            android:textColor="@{item_main_order_detail_doing.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
-            android:background="@{item_main_order_detail_doing.sendType?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
-            android:text='@{item_main_order_detail_doing.totalRecordCN}'
+            android:padding="1dp"
+            android:textColor="@color/black"
+            android:background="@{item_main_order_detail_doing.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
+            android:text='@{item_main_order_detail_doing.totalRecordCN2}'
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintTop_toTopOf="@+id/tv_goodname"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_goodname"
             android:layout_alignParentRight="true"
             android:id="@+id/tv_carno"
             android:singleLine="true"
@@ -150,13 +155,13 @@
 
 
         <TextView
-            android:background="@{item_main_order_detail_doing.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
+            android:background="@{item_main_order_detail_doing.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:text="@{item_main_order_detail_doing.type}"
             tools:text="来自"
             android:padding="1dp"
             android:includeFontPadding="false"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
+        app:layout_constraintTop_toTopOf="@+id/tv_duimian"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_duimian"
             app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
             android:id="@+id/tv_type"
             android:singleLine="true"
