--- a/heavycenter/src/main/res/layout/item_main_order_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_done.xml
@@ -24,7 +24,7 @@
         <TextView
             tools:text="混凝土"
             android:includeFontPadding="false"
-            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/tv_goodname"
             android:singleLine="true"
@@ -51,22 +51,23 @@
         <TextView
             android:padding="1dp"
             tools:text="来自"
-            android:background="@{item_main_order_done.sendType?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
-            android:layout_marginTop="7dp"
+            android:background="@{item_main_order_done.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:includeFontPadding="false"
-            app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
+            app:layout_constraintTop_toTopOf="@+id/tv_companyname"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_companyname"
             app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
             android:id="@+id/tv_type"
             android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="13sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_companyname"
+
             android:text="@{item_main_order_done.type}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:includeFontPadding="false"
             tools:text="王尼玛"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="7dp"
             app:layout_constraintLeft_toRightOf="@+id/tv_type"
             app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
             android:id="@+id/tv_companyname"
@@ -83,7 +84,7 @@
         <LinearLayout
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@{item_main_order_done.sendType?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
+            android:background="@{item_main_order_done.IDiliverCom?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -95,7 +96,7 @@
                 android:includeFontPadding="false"
                 android:id="@+id/tv_totalcarnum"
                 android:singleLine="true"
-                android:textColor="@{item_main_order_done.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
+                android:textColor="@{item_main_order_done.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="12sp"
                 android:text="@{item_main_order_done.totalRecordCN}"
                 android:layout_width="wrap_content"
@@ -108,7 +109,7 @@
                 android:includeFontPadding="false"
                 android:id="@+id/tv_plan"
                 android:singleLine="true"
-                android:textColor="@{item_main_order_done.sendType?@color/color_hv_yelll:@color/color_hv_blue}"
+                android:textColor="@{item_main_order_done.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="12sp"
                 android:text="@{item_main_order_done.planNumberCN}"
                 android:layout_width="wrap_content"
@@ -119,7 +120,7 @@
         <TextView
             tools:text="实发:"
             android:id="@+id/tv_send"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="7dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_companyname"
             app:layout_constraintLeft_toLeftOf="@+id/tv_type"
             android:layout_gravity="center_vertical"
@@ -158,7 +159,7 @@
                 android:layout_gravity="bottom|left"
                 android:gravity="center"
                 android:singleLine="true"
-                android:textColor="@color/color_hv_yelll"
+                android:textColor="@{item_main_order_done.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="21sp"
                 android:text='@{item_main_order_done.actualSh+"t"}'
                 android:layout_width="wrap_content"
