--- a/heavycenter/src/main/res/layout/item_main_store_detail_top.xml
+++ b/heavycenter/src/main/res/layout/item_main_store_detail_top.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -7,33 +8,63 @@
             type="String" />
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
+
+
+        <LinearLayout
+            android:id="@+id/ll_current"
+            android:visibility="visible"
+            android:gravity="center_vertical"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/icon_hv_main_store_tip_ld"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                tools:text="当前: 1234.6t"
+                android:singleLine="true"
+                android:visibility="visible"
+                android:gravity="center_vertical"
+                android:id="@+id/tv_current"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
 
 
         <com.siweisoft.heavycenter.module.view.progress.ProgressView
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ll_current"
             android:id="@+id/progress"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="38dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <LinearLayout
-            android:padding="0dp"
-            android:visibility="visible"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/progress"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:gravity="center_vertical"
             android:id="@+id/ll_min"
             android:background="@drawable/icon_hv_main_store_lt"
-            android:layout_marginTop="50dp"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
-                android:text="12"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                tools:text="125.6t"
                 android:includeFontPadding="false"
-                    android:singleLine="true"
+                android:singleLine="true"
                 android:id="@+id/tv_minwuliao"
                 android:textSize="17sp"
                 android:textColor="@color/white"
@@ -41,9 +72,13 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:text="f"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="3dp"
+                tools:text="125.6t"
                 android:includeFontPadding="false"
-                    android:singleLine="true"
+                android:singleLine="true"
                 android:id="@+id/tv_minstore"
                 android:textColor="@color/color_grey_500"
                 android:textSize="13sp"
@@ -52,18 +87,23 @@
         </LinearLayout>
 
 
+
         <LinearLayout
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/ll_max"
             android:gravity="center_vertical"
             android:background="@drawable/icon_hv_main_store_rt"
-            android:layout_marginTop="50dp"
-            android:layout_alignParentRight="true"
+            app:layout_constraintTop_toBottomOf="@+id/progress"
+            app:layout_constraintRight_toRightOf="parent"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
-                    android:singleLine="true"
+                tools:text="125.6t"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:singleLine="true"
                 android:id="@+id/tv_maxwuliao"
                 android:textSize="17sp"
                 android:textColor="@color/white"
@@ -71,7 +111,12 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                    android:singleLine="true"
+                tools:text="125.6t"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="3dp"
+                android:singleLine="true"
                 android:gravity="center_vertical"
                 android:id="@+id/tv_maxstore"
                 android:textSize="13sp"
@@ -80,17 +125,6 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
-        <TextView
-                android:singleLine="true"
-            android:visibility="gone"
-            android:gravity="center_vertical"
-            android:id="@+id/tv_current"
-            android:paddingLeft="5dp"
-            android:background="@drawable/icon_hv_main_store_tip_ld"
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 </layout>
