--- a/heavycenter/src/main/res/layout/item_main_trans2.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans2.xml
@@ -62,7 +62,9 @@
                 android:textSize="13sp" />
 
         <TextView
-                tools:text="混凝土"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            tools:text="混凝土"
                 android:layout_marginLeft="10dp"
                 android:id="@+id/productName"
                 android:layout_width="wrap_content"
@@ -75,8 +77,9 @@
                 app:layout_constraintTop_toTopOf="@id/circlebar" />
 
         <TextView
-
-                tools:text="c300"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            tools:text="c300"
                 android:id="@+id/tv_specifications"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
