--- a/heavycenter/src/main/res/layout/frag_main_weigts.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts.xml
@@ -32,7 +32,6 @@
             android:layout_height="wrap_content"
             style_common:iv_left="@drawable/icon_hv_person"
             style_common:iv_right="@drawable/icon_hv_scan"
-            style_common:iv_right2="@drawable/icon_hv_add"
             style_common:txt_mid="地磅" />
 
         <com.siweisoft.heavycenter.module.view.menu.TopTypeView
@@ -69,17 +68,33 @@
             android:layout_height="0dp"/>
 
 
+
+
+
+
         <include
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            app:layout_constraintTop_toTopOf="@+id/view1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/bottom"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            layout="@layout/frag_main_weigts_bottom"/>
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                app:layout_constraintTop_toTopOf="@+id/view1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/bottom_sel"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                layout="@layout/frag_main_weigts_bottom_resel"/>
+
+        <include
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                app:layout_constraintTop_toTopOf="@+id/view1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:id="@+id/bottom"
+                layout="@layout/frag_main_weigts_bottom"/>
 
 
     </android.support.constraint.ConstraintLayout>
