--- a/lib/src/main/res/anim/anim_push_left_in_litter.xml
+++ b/lib/src/main/res/anim/anim_push_left_in_litter.xml
@@ -3,7 +3,7 @@
     <translate
         android:fromXDelta="-20%p"
         android:toXDelta="0"
-        android:duration="@integer/integer_time_short"
+        android:duration="200"
         android:interpolator="@android:interpolator/accelerate_decelerate" />
 
 
