--- a/lib/src/main/res/anim/anim_push_left_out_litte.xml
+++ b/lib/src/main/res/anim/anim_push_left_out_litte.xml
@@ -3,7 +3,7 @@
     <translate
         android:fromXDelta="0%p"
         android:toXDelta="-20%p"
-        android:duration="@integer/integer_time_short"
+        android:duration="200"
         android:interpolator="@android:interpolator/accelerate_decelerate" />
 
 
