--- a/lib/src/main/res/anim/anim_push_right_in_helf.xml
+++ b/lib/src/main/res/anim/anim_push_right_in_helf.xml
@@ -5,7 +5,7 @@
     <translate
         android:fromXDelta="50%p"
         android:toXDelta="0%p"
-        android:duration="@integer/integer_time_short" />
+        android:duration="200" />
 
 
 </set>
