--- a/lib/src/main/res/anim/anim_push_right_out.xml
+++ b/lib/src/main/res/anim/anim_push_right_out.xml
@@ -5,7 +5,7 @@
     <translate
         android:fromXDelta="0"
         android:toXDelta="100%p"
-        android:duration="@integer/integer_time_short"
+        android:duration="200"
         android:interpolator="@android:interpolator/accelerate_decelerate" />
 
 </set>
