--- a/heavycenter/src/main/res/layout/item_main_order_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_done.xml
@@ -21,7 +21,7 @@
         android:id="@+id/ll_doneorder"
         android:transitionName="doingorder">
 
-        <TextView
+        <com.siweisoft.heavycenter.module.view.text.MarqTextView
             tools:text="混凝土"
             android:includeFontPadding="false"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,22 +30,10 @@
             android:singleLine="true"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-            android:text="@{item_main_order_done.productName}"
+            android:text="@{item_main_order_done.productNameAndSpecification}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            tools:text="c000"
-            android:includeFontPadding="false"
-            app:layout_constraintLeft_toRightOf="@+id/tv_goodname"
-            android:id="@+id/tv_spes"
-            android:singleLine="true"
-            android:layout_marginLeft="15dp"
-            android:textColor="@color/white"
-            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-            android:text="@{item_main_order_done.specification}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
 
         <TextView
